# plugin-hashes-counter

./: CMakeLists.txt  pyproject.toml
src/: quant_sig.cpp
src/hashes_counter/: __init__.py
