[build-system]
requires = ["scikit-build-core >=0.10.7", "nanobind >=2.2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "hashes_counter"
version = "0.1"
description = "Snipe plugin for counting hashes"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Mohamed Abuelanin", email = "mabuelanin@gmail.com" }]
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3"]

dependencies = [
    "click>=8",
    "snipe",
]

[project.urls]
Homepage = "https://github.com/snipe-bio/pangenome-plugin"


[project.entry-points."snipe.plugins"]
hashes_counter = "hashes_counter:hashes_counter"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
